--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,118 +1,66 @@
+*{
+    margin: auto;
+}
 :root {
-	--heading-background-color: #FFEE5A;
-	--heading-text-color: #C5C3C6;
+	--primary-color: #fdd610;
+	--secondary-color: #C5C3C6;
     --accent1-color: #01060C;
-    --accent1-color: #1985A1;
+    --accent2-color: #1985A1;
+    --writeup-color: #f01123;
 	--heading-font: 'montserrat', Helvetica, sans-serif;
-    
 	--padding: 1rem;
 	--border: 1px solid rgb(0 0 / 0.1);
+}
+    body {
+        font-family: "Roboto", serif;
+        background-color: var(--secondary-color);
+        color: var(--accent1-color);
+        max-width: 1200px;
+    }
+    h1,h2 {
+        color: var(--writeup-color);
+    }
 
-    
-    
-    .logo img {
-        margin: 0 0.25rem 0 1rem;
-        width: 64px;
+    p {
+        color:#000
+    }
+    nav a {
+        text-decoration: none;
+        color: var(--writeup-color);
+    }
+
+    .sociallinks a:hover img {
+        opacity: 0.8;
+    }
+    .hero {
+       position: relative;
+       margin: 10px auto;
+       background-size: cover;
+       background-position: center;
+    }
+    .hero img {
+        display: block;
+        width: 100%;
         height: auto;
     }
-    
     h1 {
-        font-size: 2rem;
-        font-family: Acme, Arial, sans-serif;
-    }
-    
-    .navigation {
-        display: flex;
-        flex-wrap: wrap;
-        list-style: none;
-        padding: 0;
-        font-family: Arial, sans-serif;
-    }
-    
-    .navigation li {
-        flex: 1 1 auto;
-    }
-    
-    .navigation a {
+        position: absolute;
+        top: 46%;
+        right: 40%;
+        text-align: center;
         display: block;
-        color: navy;
-        padding: 20px;
-        text-decoration: none;
-        font-size: 1.2rem;
+        padding: 10 810px;
+        background-color: #63b2da;
     }
-    
-    .navigation a:hover {
-        color: tomato;
-        font-weight: 700;
-        text-decoration: underline;
+    article {
+        position: absolute;
+        top: 58%;
+        right: 25%;
+        left: 20%;
+        background-color: #e6ed63;
+        opacity: 0.7;
+        padding: 15px;
     }
-    
-hi {
-	background-color
-}
-
-}
-* {
-	margin: 0;
-	padding: 0;
-}
-
-header {
-    margin: 1rem auto;
-    display: grid;
-    grid-template-columns: 120px 1fr 1fr;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    max-width: 1000px;
-}
-
-main {
-	max-width: 800px;
-	margin: 2rem auto;
-	font-family: Roboto, Arial, sans-serif;
-}
-
-h2 {
-	text-align: center;
-	font-size: 1.5rem;
-	text-shadow: 3px 3px 5px #777;
-}
-
-.herodiv {
-	margin: 10px auto;
-	position: relative; /* If removed, what happens? */
-}
-
-.herodiv img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
-.stats {
-	position: absolute;
-	top: 25px;
-	right: 25px;
-	background: radial-gradient(#eee, #11aa11);
-	border: 1px solid #000;
-	padding: 0.65rem;
-	box-shadow: 0 0 30px #111;
-	opacity: 0.9;
-}
-
-h3 {
-	text-shadow: 0 0 15px #333;
-	border-bottom: 1px solid #999;
-	margin-bottom: 0.3rem;
-}
-
-footer {
-	position: 0;
-	bottom: 0;
-	margin: 1rem;
-	border-top: 3px solid #000;
-	padding: 0.5rem;
-	color: navy;
-	font-weight: 100;
-	font-style: italic;
-}
+    article img {
+        float: right;
+    }
