--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,45 +7,74 @@
     --writeup-color: #f01123;
 	--heading-font: 'montserrat', Helvetica, sans-serif;
 	--padding: 1rem;
-	--border: 1px solid rgb(0, 0, 0.1);
+	--border: 10px solid rgb(0, 0, 0.1);
 }
-    body {
-        font-family: "Roboto", serif;
+header {
+	margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 120px 1fr 1fr;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
+}
+header img {
+    width: 200px;
+}
+.logo img {
+	margin: 0 0.25rem 0 1rem;
+	width: 64px;
+	height: auto;
+}
+
+h1 {
+	font-size: 2rem;
+	font-family: Acme, Arial, sans-serif;
+}
+
+.navigation {
+	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+	padding: 0;
+	font-family: Arial, sans-serif;
+}
+.navigation li {
+	flex: 1 1 auto;
+}
+.navigation a:hover {
+	color: rgb(25, 22, 11);
+	font-weight: 700;
+	text-decoration: underline;
+}
+
+body {
+	font-family: "Roboto", serif;
         background-color: var(--secondary-color);
         color: var(--accent1-color);
         max-width: 2000px;
+}
+
+article {
+	margin: 1em auto;
+	border: 1px solid rgb(0 0 0 / 0.1);
+	padding: 1em;
+	background-color: #ace;
+	width: min(600px, 100%);
+	font-size: 1.2rem;
+}
+    .navbar{
+        width: 95%;
+        height: auto;
+        margin-right: 30px;
     }
-    header {
-        margin: 1rem auto;
-        display: grid;
-        grid-template-columns: 400px;
-        justify-content: center;
-        align-items: center;
-        border-bottom: 10px solid #686a40;
-        max-width: 1250px;
-    }
-    nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 17px;
-    }
-    header img {
-        width: 100px;
-        left: 200%;
-    }
-    nav ul {
-        list-style-type: none;
-        display: flex;
-    }
+
     nav a {
         display: block;
         text-decoration: none;
         color: var(--writeup-color);
-        text-align: center;
         padding: 1rem;
         text-decoration: none;
     }
+
     h1,h2 {
         color: var(--writeup-color);
     }
@@ -54,7 +83,7 @@
         background-color: var(--text-color);
         color: #63b2da;
         padding: 1rem;
-        border: 1px solid #f1f6f8;
+        border: 100px solid #f1f6f8;
         border-radius: 10px;
     }
     figcaption {
@@ -76,6 +105,10 @@
     .sociallinks a:hover img {
         opacity: 0.8;
     }
+    .sociallinks {
+        display: flex;
+        justify-content: right;
+    }
     .hero {
        position: relative;
        margin: 10px auto;
@@ -86,10 +119,11 @@
         display: block;
         width: 100%;
         height: auto;
+        float: right;
     }
     h1 {
         position: absolute;
-        top: 77%;
+        top: 27%;
         right: 30%;
         text-align: center;
         display: block;
@@ -98,8 +132,8 @@
     }
     article {
         position: absolute;
-        top: 92%;
-        right: 15%;
+        top: 39%;
+        right: 23%;
         left: 13%;
         background-color: #e6ed63;
         opacity: 0.7;
